--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Сайт студента Кирилловой Алёны Александровны гр.3239
-    <a href="23oct24.html"> 23 октября </a>
+    <a href="23oct24.html"> 23 октября 2024 </a>
 </body>
 </html>
