--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     Сайт студента Кирилловой Алёны Александровны гр.3239
-    <a href="23oct24.html"> 23 октября 2024 </a>
+    <a href="23oct24.html"> 23 октября 2024 </a> <br>
+    <a href="202nov24.html"> 2 ноября 2024 </a> <br>
 </body>
 </html>
