--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     Сайт студента Кирилловой Алёны Александровны гр.3239
     <a href="23oct24.html"> 23 октября 2024 </a> <br>
     <a href="02nov24.html"> 2 ноября 2024 </a> <br>
+    <a href="07nov24.html"> 7 ноября 2024 </a> <br>
 </body>
 </html>
