--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="02nov24.html"> 2 ноября 2024 </a> <br>
     <a href="07nov24.html"> 7 ноября 2024 </a> <br>
     <a href="11nov24.html"> 11 ноября 2024 </a> <br>
+    <a href="14nov24.html"> 14 ноября 2024 </a> <br>
 </body>
 </html>
