--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="07nov24.html"> 7 ноября 2024 </a> <br>
     <a href="11nov24.html"> 11 ноября 2024 </a> <br>
     <a href="14nov24.html"> 14 ноября 2024 </a> <br>
+    <a href="18nov24.html"> 18 ноября 2024 </a> <br>
 </body>
 </html>
