--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="11nov24.html"> 11 ноября 2024 </a> <br>
     <a href="14nov24.html"> 14 ноября 2024 </a> <br>
     <a href="18nov24.html"> 18 ноября 2024 </a> <br>
+    <a href="21nov24.html"> 21 ноября 2024 </a> <br>
 </body>
 </html>
