--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <a href="28nov24.html"> 28 ноября 2024 </a> <br>
     <a href="02dec24.html"> 2 декабря 2024 </a> <br>
     <a href="05dec24.html"> 5 декабря 2024 </a> <br>
+    <a href="16dec24.html"> 16 декабря 2024. Слайдер </a> <br>
 </body>
 </html>
