--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="02dec24.html"> 2 декабря 2024 </a> <br>
     <a href="05dec24.html"> 5 декабря 2024 </a> <br>
     <a href="16dec24.html"> 16 декабря 2024. Слайдер </a> <br>
+     <a href="19dec24.html"> 19 декабря 2024 </a> <br>
 </body>
 </html>
